2008-08-21  Hans Boehm <Hans.Boehm@hp.com>
	* mark.c: (GC_push_next_marked, GC_push_next_marked_dirty,
	GC_push_next_marked_uncollectable): Never invoke GC_push_marked
	on free hblk.
	* headers.c: Test COUNT_HDR_CACHE_HITS not USE_HDR_CACHE.
	(GC_header_cache_miss): Always blacklist pointers for free
	hblks.  Add assertion and comment.
	* pthread_support.c (GC_register_my_thread): Fix #if indentation.
	* include/private/gc_hdrs.h: USE_HDR_CACHE is no longer tested.
	Delete it.
	* include/private/gc_pmark.h: (PUSH_OBJ): Add assertion.

2008-08-21  Hans Boehm <Hans.Boehm@hp.com>
	* alloc.c, include/gc_mark.h, Makefile.direct: Improve comments.

2008-08-01  Hans Boehm <Hans.Boehm@hp.com> (Really Klaus Treichel)
	* configure.ac: Set win32_threads on MinGW.
	* configure: Regenerate.

2008-07-25  Hans Boehm <Hans.Boehm@hp.com> (Really mostly Ivan Maidanski)
	Ivan's description of the patch follows. Note that a few pieces like
	the GC_malloc(0) patch, were not applied since an alternate had been
	previously applied.  A few differed stylistically from the rest of
	the code (mostly casts to void * instead of target type),
	or were classified as too minor to bother.  Note that
	all of Ivan's static declarations which did not correct outright
	naming bugs (as a few did), where replaced by STATIC, which is
	ignored by default.

        - minor bug fixing (for FreeBSD, for THREAD_LOCAL_ALLOC and for
	  GC_malloc(0));
        - addition of missing getter/setter functions for public variables
	  (may be useful if compiled as Win32 DLL);
        - addition of missing GC_API for some exported functions;
        - addition of missing "static" declarator for internal functions
	   and variables (where possible);
        - replacement of all remaining K&R-style definitions with ANSI
	  C ones (__STDC__ macro is not used anymore);
        - addition of some Win32 macro definitions (that may be missing in
	  the standard headers supplied with a compiler) for GWW_VDB mode;