@@ -173,7 +173,7 @@ no longer necessary to call GC_ routines explicitly, though that can also
 improve the quality of the leak reports.
 <LI> Build the collector and install it in directory <I>foo</i> as follows:
 <UL>
-<LI> <TT>configure --prefix=<I>foo</i> --enable-full-debug --enable-redirect-malloc
+<LI> <TT>configure --prefix=<I>foo</i> --enable-gc-debug --enable-redirect-malloc
 --disable-threads</tt>
 <LI> <TT>make</tt>
 <LI> <TT>make install</tt>
