@@ -255,10 +255,10 @@ fail:
 }
 
 
-GC_API void * GC_pre_incr (void **p, size_t how_much)
+GC_API void * GC_pre_incr (void **p, ptrdiff_t how_much)
 {
     void * initial = *p;
-    void * result = GC_same_obj((void *)((word)initial + how_much), initial);
+    void * result = GC_same_obj((void *)((ptr_t)initial + how_much), initial);
     
     if (!GC_all_interior_pointers) {
     	(void) GC_is_valid_displacement(result);
@@ -266,10 +266,10 @@ GC_API void * GC_pre_incr (void **p, size_t how_much)
     return (*p = result);
 }
 
-GC_API void * GC_post_incr (void **p, size_t how_much)
+GC_API void * GC_post_incr (void **p, ptrdiff_t how_much)
 {
     void * initial = *p;
-    void * result = GC_same_obj((void *)((word)initial + how_much), initial);
+    void * result = GC_same_obj((void *)((ptr_t)initial + how_much), initial);
  
     if (!GC_all_interior_pointers) {
     	(void) GC_is_valid_displacement(result);
